--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <h1>kicsi pp</h1>
+    <h1>Üdvözlünk a 11.E SMP weboldalán!</h1>
+    <p>A 11.E SMP egy Minecraft szerver, amit a PÁGISZ 11.E-s diákjai csinálnak és üzemeltetnek.</p>
 </body>
 </html>
