Added discord image

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <h1>Üdvözlünk a 11.E SMP weboldalán!</h1>
     <p>A 11.E SMP egy Minecraft szerver, amit a PÁGISZ 11.E-s diákjai csinálnak és üzemeltetnek.</p>
-    
+    <p>Discord szerverünk (kattints a képre)</p>
+    <a href=""><img src""></a>
 </body>
 </html>
