discord img done + discord inv link working when clicking on img

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <h1>Üdvözlünk a 11.E SMP weboldalán!</h1>
     <p>A 11.E SMP egy Minecraft szerver, amit a PÁGISZ 11.E-s diákjai csinálnak és üzemeltetnek.</p>
     <p>Discord szerverünk (kattints a képre)</p>
-    <a href=""><img src""></a>
+    <p><a href="https://discord.gg/RHytryhaYh" target="_blank"><img src="img/image.png" id="img1"></a></p>
 </body>
 </html>
