--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     <p>A 11.E SMP egy Minecraft szerver, amit a PÁGISZ 11.E-s diákjai csinálnak és üzemeltetnek.</p>
     <p>Discord szerverünk (kattints a képre)</p>
     <p><a href="https://discord.gg/RHytryhaYh" target="_blank"><img src="img/image.png" id="img1"></a></p>
+    <p>A szerver ip címe:</p>
+    <p>HAMAROSAN!</p>
 </body>
 </html>
