--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <p>Discord szerverünk (kattints a képre)</p>
     <p><a href="https://discord.gg/RHytryhaYh" target="_blank"><img src="img/image.png" id="img1"></a></p>
     <p>A szerver ip címe:</p>
-    <p>HAMAROSAN!</p>
+    <p id="hamarosan">HAMAROSAN!</p>
+    
 </body>
 </html>
