--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <h1>Üdvözlünk a 11.E SMP weboldalán!</h1>
+    <h1>Üdvözlünk a 11.ENTERTAINMENT SMP weboldalán!</h1>
     <p>A 11.E SMP egy Minecraft szerver, amit a PÁGISZ 11.E-s diákjai csinálnak és üzemeltetnek.</p>
     <p>Discord szerverünk (kattints a képre)</p>
     <p><a href="https://discord.gg/RHytryhaYh" target="_blank"><img src="img/image.png" id="img1"></a></p>
